src/test/ui/compile-fail-migration/disallowed-deconstructing-destructing-struct-match.stderr
error[E0509]: cannot move out of type `X`, which implements the `Drop` trait
  --> $DIR/disallowed-deconstructing-destructing-struct-match.rs:25:9
   |
LL |         X { x: y } => println!("contents: {}", y)
   |         ^^^^^^^-^^
   |         |      |
   |         |      hint: to prevent move, use `ref y` or `ref mut y`
   |         cannot move out of here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0509`.
